Fix downloadattachment overlapping border
The downloadattachment div in elevator-dark was overlapping the
top border of messagebody.

--- a/share/static/css/elevator-dark/main.css
+++ b/share/static/css/elevator-dark/main.css
@@ -209,6 +209,11 @@
     padding-top: 0.4em;
 }
 
+.darkmode .transaction table + div.downloadattachment {
+    position: relative;
+    top: 0.6em;
+}
+
 .darkmode svg.icon-bordered {
     border: solid 0.05em #717171;
 }
